# code

./: .gitignore  README.md  gitpress.json  index.html  params.json
Android/MyFirstApp/: AndroidManifest.xml
Bat/: readme.md
Bat/examples/: parameters.bat  pre-defined_vars.bat
Bat/examples/execute_bat_scripts/: README.md
Bat/test/call/: son.bat
Bat/test/direct_execute/: grandson.bat
Bat/test/start/: parent.bat
Bat/util/: enter_vs.bat  enter_vs11.bat  enter_vs8.bat  print_folders.bat
CMake/: .gitignore
CMake/CMake_Practice/t2/: .gitignore  CMakeLists.txt  runhello.sh
CMake/CMake_Practice/t3/lib/: CMakeLists.txt  hello.c  hello.h
CMake/CMake_Practice/t4/: .gitignore  CMakeLists.txt
CMake/CMake_Practice/t4/src/: CMakeLists.txt  main.c
CMake/CMake_Practice/t5/: CMakeLists.txt
CMake/CMake_Practice/t6/: CMakeLists.txt
CMake/CMake_Practice/t6/cmake/: FindHELLO.cmake  FindHello.cmake
CMake/CMake_Practice/t6/src/: CMakeLists.txt  main.c
CMake/examples/export_symbol_in_executable/: CMakeLists.txt
CMake/examples/test/: CMakeLists.txt
CMake/examples/variables/: CMakeLists.txt
CMake/t1/t1-MinGW/: CMakeLists.txt
CMake/t1/t1-VS/: main.c
CMake/test/macro_test/: CMakeLists.txt
CMake/test/variables/: CMakeLists.txt
CPP/test/: test.sln
CSharp/test/: test.sln
CoffeeScript/: .gitignore  anonymous_function.coffee  anonymous_function.js  comprehensions.coffee  conditions.coffee  cubes.coffee  everything_is_expression.coffee  existential.coffee  gitpress.json  iterate_object.coffee  lexical_scoping.coffee  loops.coffee  objects_arrays.coffee  operators.coffee  slice_splice.coffee  splats.coffee
CoffeeScript/OO/: class.coffee
Cpp/: .gitignore
Cpp/CppCommonKnowledge/: Item32.cpp
Cpp/EssbaseCppConnector/: EssbaseCppConnector.sln
Cpp/WIN/: CMakeLists.txt
Cpp/WIN/examples/: CMakeLists.txt  kerberos.cpp
Cpp/algorithms/: 2_n.3_n.cpp  DFA_min.cpp  exGCD.cpp  matrix.cpp  phi_2.cpp  powermod.cpp  quickSort.cpp  汉字区位码.cpp
Cpp/automata/: CMakeLists.txt
Cpp/automata/test/: BackScanDFA.cpp  BooleanMatrix.cpp  CMakeLists.txt  CSVParser.cpp  DFA.cpp  FaultToleranceCSVParser.cpp  GenerateScanDFA.cpp  GenerateScanNFA.cpp  NoErrorCSVParser.cpp  ScanDFA.cpp
Cpp/cv/: Bezier.cpp  ContourDetection.cpp  CreateSaveCopyImage.cpp  Fractal.cpp  Histogram.cpp  IDFT.cpp  IplImageTest.cpp  LineSegDetection.cpp  MatTest.cpp  PtrTest.cpp  ReadImageAndShow.cpp  RefCountTest.cpp  SIFT.h  edge.cpp
Cpp/examples/export_template_base_class/src/: CMakeLists.txt  README.md  derived.cpp  derived.h  exports.h  library.cpp  library.h  library1.cpp  library1.h  main.cpp  template.h
Cpp/icu/: icu.cpp
Cpp/libcurl/: curl-7.34.0-devel-mingw64.7z
Cpp/libcurl/test/: 10_at_a_time.cpp  CMakeLists.txt  gzip_test.cpp
Cpp/libraries/libcurl/examples/: CMakeLists.txt  gzip_test.cpp  libcurl_kerberos.cpp
Cpp/opencv/: DFT_IDFT.cpp  GramSchimit.cpp  SIFT.cpp
Cpp/opensource/: README.md
Cpp/opensource/icu/src/: CMakeLists.txt  LCID.cpp  datetime_parser.cpp  simple_converter.cpp  to_strfmt.cpp
Cpp/opensource/xerces/2.8.0/examples/: CMakeLists.txt  file_parser.cpp  stdin_parser.cpp
Cpp/opensource/xerces/3.1.1/examples/: CMakeLists.txt  file_parser.cpp  stdin_parser.cpp
Cpp/opensource/xerces/3.1.1/examples/data/: simple.xml
Cpp/streaming/: Adaptor.h  Buffer.h  CMakeLists.txt  ChainReader.h  Consumer.cpp  shared_ptr.cpp  typename.cpp
Cpp/test/: CMakeLists.txt  test.sln
Docker/: README.md
Docker/ubuntu/: README.md
FSharp/Tutorial1/: Tutorial1.sln
Go/EulerProject/: hello.go  test.go
Go/HelloGo/: .project
Go/Test/: anonymousStructTest.go  appendTest.go  arrayTest.go  blankIdentiferTest.go  chanTest.go  constantTest.go  deferTest.go  deferTrace.go  embeddingTest.go  initTest.go  interfaceTest.go  mandelbrot.go  mapTest.go  panicTest.go  pig.dice_game.go  printingTest.go  randTest.go  selectTest.go  sliceTest.go  structTest.go  test.go  typeSwitchTest.go  valueAndPointer.go  vargsTest.go
Go/examples/: README.md  appendTest.go  blankIdentiferTest.go  chanTest.go  constantTest.go  deferTest.go  initTest.go  mapTest.go  panicTest.go  sliceTest.go  stringTest.go  stringToInt.go  structTest.go  typeSwitchTest.go  valueAndPointer.go
HTML/BFC/: 1.html
HTML/basic/: align-center.html  inline-block.html  overflow.html
HTML/float/: avoid-overlap.html  sibling-block-of-float-block.html  wrap.html
JS/: README.md
JS/Loader/: README.md
JS/automata/: demo.html
JS/codetank/: Patrol.js  new.js  new_patrol.js  operation_queue.js  predict_shot.js  stopMove.js  test.js
JS/d3.js/: 1.html  EnterAndExit.html  bar1.html  bar2.html  bar3.html  circle.html  collision.html  transition.html
JS/helloJS/: index.html  log4js.js  test.js
JS/springy/: demo.html  k33.html  k5.html  rect.html
Java/: .gitignore
Java/smallProgram/: ClassModifier.java  CompressNecktie.java  CpuCurve.java  MyNative.java  OverrideTest.java  Parcel5.java  Reflection.java  RegularExpression.java  SearchFolder.java  StormyInning.java  Test.java  WordDealUtil.java  fallibleKnowledge.java
Makefile/: phony_target.mk  static_pattern.mk
Node/addon/: binding.gyp  package.json
Node/examples/: append-only.js  binding.gyp  modulePath.js  r-array.js  request-test.js
Node/test/: closureTest.js  http.request.js  modifyBuiltInObjectTest.js  refTest.js  scopeTest.js
Python/Fabric/: fabfile.py
Python/Test/: exceptionTest.py  readFile.py
Python/examples/: simpleModule.py
SQL/: auxiliary_table_query.sql  循环语句.sql
Scala/: .gitignore
Scala/HelloScala/: .project
Scala/scala-exercise/: README.md  build.sbt
Shell/: enter_vs.sh  zorba_clone.sh
Shell/examples/: dynamic_scoping.sh  exec.sh  exit_code.sh  expansion.sh  function.sh  if.sh  loop.sh  non_block.sh  positional_parameters.sh  subshell.sh  tertiary_operator.sh  variables.sh
XQuery/HelloXQuery/: .project  HttpTest.xq  ITEM_CCTR_MNTH_SLS.xq  ManipulateXML.xq  ReadAndWrite.xq  Test.xq  XSLT.xq  ZendeskSearch.xq
XQuery/examples/: c.xq  http-client-test.xq  test.xsd  write-file.xml
matlab/: DTFT.m  ReadAndShowImage.m  see.m  漩涡矩阵.m
(+1639 files in other folders)
