SET(CMAKE_ALLOW_LOOSE_LOOP_CONSTRUCTS ON)

IF(WIN32)
	MESSAGE(STATUS "Running on Windows")
ELSEIF(APPLE)
	MESSAGE(STATUS "Running on Linux")
ELSEIF(UNIX)
	MESSAGE(STATUS "Running on UNIX")
ENDIF(WIN32)

# get host computer name
SITE_NAME(HOST_NAME)
MESSAGE(STATUS "Host Computer Name: ${HOST_NAME}")

# CAMKE_SYSTEM_NAME is for cross-compiling
# It's the target OS name
# MESSAGE(STATUS "System: ${CMAKE_SYSTEM_NAME}")
# MESSAGE(STATUS "System version: ${CMAKE_SYSTEM_VERSION}")
# MESSAGE(STATUS "Architecture: ${CMAKE_PROCESSOR}")

MESSAGE(STATUS "Processing: ${CMAKE_CURRENT_LIST_FILE}")
MESSAGE(STATUS "CURRENT SOURCE DIR IS: ${CMAKE_CURRENT_SOURCE_DIR}")
MESSAGE(STATUS "CURRENT BINARY DIR IS: ${CMAKE_CURRENT_BINARY_DIR}")

PROJECT(NEWHELLO)
ADD_SUBDIRECTORY(src)
