MESSAGE(STATUS "")
MESSAGE(STATUS "Processing: ${CMAKE_CURRENT_LIST_FILE}")
MESSAGE(STATUS "SOURCE DIR IS: ${CMAKE_SOURCE_DIR}")
MESSAGE(STATUS "BINARY DIR IS: ${CMAKE_BINARY_DIR}")
MESSAGE(STATUS "CURRENT SOURCE DIR IS: ${CMAKE_CURRENT_SOURCE_DIR}")
MESSAGE(STATUS "CURRENT BINARY DIR IS: ${CMAKE_CURRENT_BINARY_DIR}")

# MESSAGE(STATUS "CURRENT LINE: ${CMAKE_CURRENT_LIST_LINE}")

# add header file
INCLUDE_DIRECTORIES(../../t3/install/include/hello)

# add library path
# prefer to use abusolute path
IF(WIN32)
    LINK_DIRECTORIES(${CMAKE_SOURCE_DIR}/../t3/install/staticlib)
ELSEIF(UNIX)
    LINK_DIRECTORIES(${CMAKE_SOURCE_DIR}/../t3/install/lib)
ENDIF(WIN32)
    
# LINK_DIRECTORIES(../../../t3/install/bin)

# ADD_EXECUTABLE should be placed after LINK_DIRECTORIES
ADD_EXECUTABLE(main main.c)

# add library
TARGET_LINK_LIBRARIES(main hello)
